# Shrine-Bot

./: .gitignore  README.md  main.py  pyproject.toml
cogs/: basic.py  members.py  owner.py  simple.py  utils.py
utils/: custom_help_command.py  watcher.py
